Add package.json and style items

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
       width: 100px;
       padding-top: 20px;
     }
+    .colorPartFirst:hover{
+      color:#5f91e8;
+    }
+    .colorPartSecond:hover{
+      color:#55acc9;
+    }
+    .colorIntro:hover{
+      color:#9c364b;
+    }
   </style>
 </head>
 
@@ -76,7 +85,7 @@
                 <div class="sixteen wide mobile only column">
                   <div class="divider"></div>
                 </div>
-                <div class="sixteen wide column">
+                <div class="sixteen wide column colorIntro">
                   <!-- Intro -->
                   <h2>Resume</h2>
                   <p>&mdash; I am the most successful person ever to run for the presidency, by far. Nobody's ever been
@@ -97,7 +106,7 @@
             <div class="ten wide column">
               <!-- Experience -->
               <h3>Business career</h3>
-              <ul class="timeline">
+              <ul class="timeline colorPartFirst">
                 <!-- Events -->
                 <li>
                   <p><em>1984</em></p>
@@ -143,7 +152,7 @@
 
 
               <h3>Personal life</h3>
-              <ul class="timeline">
+              <ul class="timeline colorPartSecond">
                 <!-- Events -->
                 <li>
                   <p><em>1946</em></p>
@@ -163,7 +172,8 @@
                 </li>
                 <li>
                   <p><em>1968</em></p>
-                  <p>I was medically deferred and classified 1-Y (unqualified for duty except in the case of a national emergency).</p>
+                  <p>I was medically deferred and classified 1-Y (unqualified for duty except in the case of a national
+                    emergency).</p>
                 </li>
                 <li>
                   <p><em>1972</em></p>
@@ -176,36 +186,47 @@
               <!-- Languages -->
               <section>
                 <h3>Languages</h3>
-                <p class="tags small"><a href="/ru-ru" hreflang="ru" rel="alternate" class="language" lang="ru">&#x1f1f7;&#x1f1fa; <span>РУССКИЙ</span></a> <span class="language" lang="en">&#x1f1fa;&#x1f1f8; ENGLISH</span></p>
+                <p class="tags small"> <span class="language"
+                    lang="en">&#x1f1fa;&#x1f1f8; ENGLISH</span></p>
               </section>
               <!-- Skills -->
               <section>
                 <h3>Skills</h3>
-                <p class="tags small">NEGOTIATING COUNTING REMODELING WRITING ACING SINGING REPORTING INCORPORATING SELLING ADVERTISING HOSTING COMPETING TWITTING PARENTING GAMBKING DATING SUING ORGANIZING FUNDING DEBATING ADVISING PRESBYTERIANING</p>
+                <p class="tags small">NEGOTIATING COUNTING REMODELING WRITING ACING SINGING REPORTING INCORPORATING
+                  SELLING ADVERTISING HOSTING COMPETING TWITTING PARENTING GAMBKING DATING SUING ORGANIZING FUNDING
+                  DEBATING ADVISING PRESBYTERIANING</p>
               </section>
               <!-- Character -->
               <section>
                 <h3>Character</h3>
-                <p class="tags small">ADJUSTED CALM AMBITIOUS COMPETITIVE SOCIABLE DIRECT HOSTILE CARELESS IGNORANT INQUISTIVE BOLD CONFIDENT MISCHIEVOUS CHARMING INTERESTING DARING COLORFUL LAZY SELF-PROMOTING</p>
+                <p class="tags small">ADJUSTED CALM AMBITIOUS COMPETITIVE SOCIABLE DIRECT HOSTILE CARELESS IGNORANT
+                  INQUISTIVE BOLD CONFIDENT MISCHIEVOUS CHARMING INTERESTING DARING COLORFUL LAZY SELF-PROMOTING</p>
               </section>
               <!-- Likes -->
               <section>
                 <h3>Likes&#x1f603;</h3>
-                <p class="tags small">HUMOUR PATIENCE DOGS MOVIES AAPL DEMOCRACY <span class="nowrap">FC BARCELONA</span> JÄGERMEISTER LVIV FRISBEE MIDNIGHT BLUE ELECTROPOP CUCINA ITALIANA SELF-EDUCATION
-                <span class="nowrap">ATTENTION TO DETAILS</span> GRAMMAR SPELLCHECK SEMANTICS MINI-SERIES <span class="nowrap">RYAN GOSLING</span> <span class="nowrap">EMMA STONE</span> ​<span class="nowrap">CURAPROX 5460</span></p>
+                <p class="tags small">HUMOUR PATIENCE DOGS MOVIES AAPL DEMOCRACY <span class="nowrap">FC
+                    BARCELONA</span> JÄGERMEISTER LVIV FRISBEE MIDNIGHT BLUE ELECTROPOP CUCINA ITALIANA SELF-EDUCATION
+                  <span class="nowrap">ATTENTION TO DETAILS</span> GRAMMAR SPELLCHECK SEMANTICS MINI-SERIES <span
+                    class="nowrap">RYAN GOSLING</span> <span class="nowrap">EMMA STONE</span> ​<span
+                    class="nowrap">CURAPROX 5460</span></p>
               </section>
               <!-- Dislikes -->
               <section>
                 <h3>Dislikes&#x1f61e;</h3>
-                <p class="tags small"><span class="nowrap">OWN BAD HABITS</span> POLITICS RACISM ASS-KISSERS VODKA INCOMPETENCE ARROGANCE ENVY GOLF CHARTREUSE INSECTS METRO PREJUDICE REALITY-SHOWS JŪRMALA</p>
+                <p class="tags small"><span class="nowrap">OWN BAD HABITS</span> POLITICS RACISM ASS-KISSERS VODKA
+                  INCOMPETENCE ARROGANCE ENVY GOLF CHARTREUSE INSECTS METRO PREJUDICE REALITY-SHOWS JŪRMALA</p>
               </section>
               <!-- Wants -->
               <section>
                 <h3>Wants&#x1f97a;</h3>
-                <p class="tags small bulleted"><span class="tag">TO BE FIT AND HEALTHY</span><span class="tag">TO OWN MY SCHEDULE</span><span class="tag">TO READ MORE</span><span class="tag">TO OPEN A CAFÉ</span><span class="tag">TO BE BRAVE</span><span class="tag">TO BECOME A SUPERHERO</span><span class="tag">TO LISTEN AND LEARN</span></p>
+                <p class="tags small bulleted"><span class="tag">TO BE FIT AND HEALTHY</span><span class="tag">TO OWN MY
+                    SCHEDULE</span><span class="tag">TO READ MORE</span><span class="tag">TO OPEN A CAFÉ</span><span
+                    class="tag">TO BE BRAVE</span><span class="tag">TO BECOME A SUPERHERO</span><span class="tag">TO
+                    LISTEN AND LEARN</span></p>
               </section>
               <!-- Education -->
-              
+
               <!-- Articles -->
               <section>
                 <h3>Articles</h3>
